--- a/ko-KR/[leveltracker] areas.json
+++ b/ko-KR/[leveltracker] areas.json
@@ -2,711 +2,711 @@
   [
     {
       "id": "1_1_1",
-      "name": "The Twilight Strand"
+      "name": "絕望岩灘"
     },
     {
       "id": "1_1_town",
-      "name": "Lioneye's Watch"
+      "name": "獅眼守望"
     },
     {
       "id": "1_1_2",
-      "name": "The Coast"
+      "name": "暮光海灘"
     },
     {
       "id": "1_1_2a",
-      "name": "The Tidal Island"
+      "name": "海潮孤島"
     },
     {
       "id": "1_1_3",
-      "name": "The Mud Flats"
+      "name": "炙熱鹽沼"
     },
     {
       "id": "1_1_3a",
-      "name": "The Fetid Pool"
+      "name": "惡水池"
     },
     {
       "id": "1_1_4_1",
-      "name": "The Submerged Passage"
+      "name": "海潮地穴"
     },
     {
       "id": "1_1_4_0",
-      "name": "The Flooded Depths"
+      "name": "水聲之淵"
     },
     {
       "id": "1_1_5",
-      "name": "The Ledge"
+      "name": "沉寂海崖"
     },
     {
       "id": "1_1_6",
-      "name": "The Climb"
+      "name": "碎岩山坡"
     },
     {
       "id": "1_1_7_1",
-      "name": "The Lower Prison",
-      "map_name": "The Prison"
+      "name": "禁靈之獄下層",
+      "map_name": "禁靈之獄"
     },
     {
       "id": "1_1_7_2",
-      "name": "The Upper Prison"
+      "name": "禁靈之獄上層"
     },
     {
       "id": "1_1_8",
-      "name": "Prisoner's Gate"
+      "name": "監獄大門"
     },
     {
       "id": "1_1_9",
-      "name": "The Ship Graveyard"
+      "name": "魅影船墓"
     },
     {
       "id": "1_1_9a",
-      "name": "The Ship Graveyard Cave"
+      "name": "魅影船墓洞穴"
     },
     {
       "id": "1_1_11_1",
-      "name": "The Cavern of Wrath",
-      "map_name": "Merveil's Caverns"
+      "name": "怨忿之窟",
+      "map_name": "怨忿之窟"
     },
     {
       "id": "1_1_11_2",
-      "name": "The Cavern of Anger"
+      "name": "怨忿之窟深處"
     }
   ],
   [
     {
       "id": "1_2_1",
-      "name": "The Southern Forest"
+      "name": "南部森林"
     },
     {
       "id": "1_2_town",
-      "name": "The Forest Encampment"
+      "name": "森林營地"
     },
     {
       "id": "1_2_2",
-      "name": "The Old Fields"
+      "name": "前哨原野"
     },
     {
       "id": "1_2_2a",
-      "name": "The Den"
+      "name": "獸穴"
     },
     {
       "id": "1_2_3",
-      "name": "The Crossroads"
+      "name": "危機叉路"
     },
     {
       "id": "1_2_4",
-      "name": "The Broken Bridge"
+      "name": "河畔斷橋"
     },
     {
       "id": "1_2_6_1",
-      "name": "The Chamber of Sins Level 1",
-      "map_name": "The Chamber of Sins"
+      "name": "罪孽之殿：第 1 層",
+      "map_name": "罪孽之殿"
     },
     {
       "id": "1_2_6_2",
-      "name": "The Chamber of Sins Level 2"
+      "name": "罪孽之殿：第 2 層"
     },
     {
       "id": "1_2_15",
-      "name": "The Fellshrine Ruins"
+      "name": "墮道遺跡"
     },
     {
       "id": "1_2_5_1",
-      "name": "The Crypt Level 1",
-      "map_name": "The Crypt"
+      "name": "靜謐陵墓 1 樓",
+      "map_name": "靜謐陵墓"
     },
     {
       "id": "1_2_5_2",
-      "name": "The Crypt Level 2"
+      "name": "靜謐陵墓 2 樓"
     },
     {
       "id": "1_2_7",
-      "name": "The Riverways"
+      "name": "河道"
     },
     {
       "id": "1_2_8",
-      "name": "The Northern Forest"
+      "name": "北部密林"
     },
     {
       "id": "1_2_9",
-      "name": "The Western Forest"
+      "name": "西部密林"
     },
     {
       "id": "1_2_10",
-      "name": "The Weaver's Chambers"
+      "name": "織網者巢穴"
     },
     {
       "id": "1_2_11",
-      "name": "The Vaal Ruins"
+      "name": "瓦爾廢墟"
     },
     {
       "id": "1_2_12",
-      "name": "The Wetlands"
+      "name": "濕地"
     },
     {
       "id": "1_2_13",
-      "name": "The Dread Thicket"
+      "name": "驚魂樹洞"
     },
     {
       "id": "1_2_14_2",
-      "name": "The Caverns",
-      "crafting_recipe": "Vaal Skill Damage I"
+      "name": "瀑布洞穴",
+      "crafting_recipe": "瓦爾技能傷害 I"
     },
     {
       "id": "1_2_14_3",
-      "name": "The Ancient Pyramid",
-      "crafting_recipe": "Spell Damage I"
+      "name": "古金字塔",
+      "crafting_recipe": "法術傷害 I"
     }
   ],
   [
     {
       "id": "1_3_1",
-      "name": "The City of Sarn",
-      "crafting_recipe": "Movement Speed I"
+      "name": "薩恩城廢墟",
+      "crafting_recipe": "移動速度 I"
     },
     {
       "id": "1_3_town",
-      "name": "The Sarn Encampment"
+      "name": "薩恩營地"
     },
     {
       "id": "1_3_2",
-      "name": "The Slums"
+      "name": "貧民窟"
     },
     {
       "id": "1_3_3_1",
-      "name": "The Crematorium",
-      "crafting_recipe": "Defences I"
+      "name": "火葬場",
+      "crafting_recipe": "防禦 I"
     },
     {
       "id": "1_3_10_1",
-      "name": "The Sewers",
-      "crafting_recipe": "Physical Damage I"
+      "name": "下水道迷宮",
+      "crafting_recipe": "物理傷害 I"
     },
     {
       "id": "1_3_5",
-      "name": "The Marketplace"
+      "name": "市集地帶"
     },
     {
       "id": "1_3_6",
-      "name": "The Catacombs",
-      "crafting_recipe": "Elemental Damage with Attacks I"
+      "name": "黑石陵墓",
+      "crafting_recipe": "元素攻擊傷害 I"
     },
     {
       "id": "1_3_7",
-      "name": "The Battlefront"
+      "name": "激戰廣場"
     },
     {
       "id": "1_3_8_1",
-      "name": "The Solaris Temple Level 1"
+      "name": "日耀神殿：第 1 層"
     },
     {
       "id": "1_3_8_2",
-      "name": "The Solaris Temple Level 2",
-      "crafting_recipe": "Fire Damage I"
+      "name": "日耀神殿：第 2 層",
+      "crafting_recipe": "火焰傷害 I"
     },
     {
       "id": "1_3_9",
-      "name": "The Docks"
+      "name": "不朽海港"
     },
     {
       "id": "1_3_13",
-      "name": "The Ebony Barracks"
+      "name": "烏旗守衛兵營"
     },
     {
       "id": "1_3_14_1",
-      "name": "The Lunaris Temple Level 1",
-      "map_name": "The Lunaris Temple"
+      "name": "月影神殿：第 1 層",
+      "map_name": "月影神殿"
     },
     {
       "id": "1_3_14_2",
-      "name": "The Lunaris Temple Level 2",
-      "crafting_recipe": "Lightning Damage I"
+      "name": "月影神殿：第 2 層",
+      "crafting_recipe": "閃電傷害 I"
     },
     {
       "id": "1_3_15",
-      "name": "The Imperial Gardens",
-      "crafting_recipe": "All Attributes I"
+      "name": "皇家花園",
+      "crafting_recipe": "全能力 I"
     },
     {
       "id": "1_3_17_1",
-      "name": "The Library"
+      "name": "圖書館"
     },
     {
       "id": "1_3_17_2",
-      "name": "The Archives",
-      "crafting_recipe": "Life and Mana Regeneration I"
+      "name": "檔案室",
+      "crafting_recipe": "生命和魔力回復 I"
     },
     {
       "id": "1_3_18_1",
-      "name": "The Sceptre of God"
+      "name": "神權之塔"
     },
     {
       "id": "1_3_18_2",
-      "name": "The Upper Sceptre of God"
+      "name": "上層神權之塔"
     },
     {
       "id": "Labyrinth_Airlock",
-      "name": "Aspirants' Plaza"
+      "name": "試煉者廣場"
     }
   ],
   [
     {
       "id": "1_4_1",
-      "name": "The Aqueduct"
+      "name": "水道遺跡"
     },
     {
       "id": "1_4_town",
-      "name": "Highgate"
+      "name": "統治者之殿"
     },
     {
       "id": "1_4_2",
-      "name": "The Dried Lake",
-      "crafting_recipe": "Attack, Cast and Warcry Speed I"
+      "name": "乾涸湖岸",
+      "crafting_recipe": "攻擊、施放和戰吼速度 I"
     },
     {
       "id": "1_4_3_1",
-      "name": "The Mines Level 1",
-      "crafting_recipe": "Socket Colours"
+      "name": "漆黑礦坑：第 1 層",
+      "crafting_recipe": "插槽顏色"
     },
     {
       "id": "1_4_3_2",
-      "name": "The Mines Level 2"
+      "name": "漆黑礦坑：第 2 層"
     },
     {
       "id": "1_4_3_3",
-      "name": "The Crystal Veins",
-      "crafting_recipe": "Cold Damage I"
+      "name": "水晶礦脈",
+      "crafting_recipe": "冰冷傷害 I"
     },
     {
       "id": "1_4_4_1",
-      "name": "Kaom's Dream"
+      "name": "岡姆的幻境"
     },
     {
       "id": "1_4_4_3",
-      "name": "Kaom's Stronghold",
-      "crafting_recipe": "Socket Links - 2 to 4 Linked Sockets"
+      "name": "岡姆的堡壘",
+      "crafting_recipe": "插槽數量 - 2 至 4 個插槽"
     },
     {
       "id": "1_4_5_1",
-      "name": "Daresso's Dream"
+      "name": "德瑞索的幻境"
     },
     {
       "id": "1_4_5_2",
-      "name": "The Grand Arena",
-      "crafting_recipe": "Socket Numbers - 2 to 4 Sockets"
+      "name": "大競技場",
+      "crafting_recipe": "插槽數量 - 2 至 4 個插槽"
     },
     {
       "id": "1_4_6_1",
-      "name": "The Belly of the Beast Level 1"
+      "name": "巨獸之腹：第 1 層"
     },
     {
       "id": "1_4_6_2",
-      "name": "The Belly of the Beast Level 2",
-      "crafting_recipe": "Elemental Resistances II"
+      "name": "巨獸之腹：第 2 層",
+      "crafting_recipe": "元素抗性 II"
     },
     {
       "id": "1_4_6_3",
-      "name": "The Harvest"
+      "name": "育靈之室"
     },
     {
       "id": "1_4_7",
-      "name": "The Ascent",
-      "crafting_recipe": "Ailment, Stun and Curse Mitigation I"
+      "name": "岩岸陡坡",
+      "crafting_recipe": "異常狀態、暈眩和詛咒減免 I"
     },
     {
       "id": "Labyrinth_Airlock",
-      "name": "Aspirants' Plaza"
+      "name": "試煉者廣場"
     }
   ],
   [
     {
       "id": "1_5_1",
-      "name": "The Slave Pens"
+      "name": "奴役監牢"
     },
     {
       "id": "1_5_town",
-      "name": "Overseer's Tower"
+      "name": "監守高塔"
     },
     {
       "id": "1_5_2",
-      "name": "The Control Blocks"
+      "name": "鎮壓地帶"
     },
     {
       "id": "1_5_3",
-      "name": "Oriath Square"
+      "name": "奧瑞亞大廣場"
     },
     {
       "id": "1_5_4",
-      "name": "The Templar Courts"
+      "name": "神聖大教堂"
     },
     {
       "id": "1_5_5",
-      "name": "The Chamber of Innocence",
-      "crafting_recipe": "Movement Speed and Exerted Attacks II"
+      "name": "無罪之室",
+      "crafting_recipe": "移動速度和竭盡攻擊 II"
     },
     {
       "id": "1_5_4b",
-      "name": "The Torched Courts"
+      "name": "焚燒大教堂"
     },
     {
       "id": "1_5_3b",
-      "name": "The Ruined Square"
+      "name": "大廣場廢墟"
     },
     {
       "id": "1_5_6",
-      "name": "The Ossuary",
-      "crafting_recipe": "Physical Damage II"
+      "name": "葬骨禮堂",
+      "crafting_recipe": " 物理傷害 II"
     },
     {
       "id": "1_5_7",
-      "name": "The Reliquary",
-      "crafting_recipe": "Accuracy I"
+      "name": "聖物間",
+      "crafting_recipe": "命中 I"
     },
     {
       "id": "1_5_8",
-      "name": "The Cathedral Rooftop"
+      "name": "聖堂屋頂"
     }
   ],
   [
     {
       "id": "2_6_town",
-      "name": "Lioneye's Watch"
+      "name": "獅眼守望"
     },
     {
       "id": "2_6_1",
-      "name": "The Twilight Strand"
+      "name": "絕望岩灘"
     },
     {
       "id": "2_6_2",
-      "name": "The Coast"
+      "name": "暮光海灘"
     },
     {
       "id": "2_6_3",
-      "name": "The Tidal Island"
+      "name": "海潮孤島"
     },
     {
       "id": "2_6_4",
-      "name": "The Mud Flats"
+      "name": "炙熱鹽沼"
     },
     {
       "id": "2_6_5",
-      "name": "The Karui Fortress",
-      "crafting_recipe": "Defences II"
+      "name": "卡魯堡壘",
+      "crafting_recipe": "防禦 II"
     },
     {
       "id": "2_6_6",
-      "name": "The Ridge"
+      "name": "破碎山脊"
     },
     {
       "id": "2_6_7_1",
-      "name": "The Lower Prison",
-      "map_name": "The Prison",
-      "crafting_recipe": "Double Resistances I"
+      "name": "禁靈之獄下層",
+      "map_name": "禁靈之獄",
+      "crafting_recipe": "兩倍抗性 I"
     },
     {
       "id": "2_6_7_2",
-      "name": "Shavronne's Tower",
-      "crafting_recipe": "Spell Damage II"
+      "name": "薛朗監塔",
+      "crafting_recipe": "法術傷害 II"
     },
     {
       "id": "2_6_8",
-      "name": "Prisoner's Gate"
+      "name": "監獄大門"
     },
     {
       "id": "2_6_9",
-      "name": "The Western Forest",
-      "crafting_recipe": "Attributes II"
+      "name": "西部密林",
+      "crafting_recipe": "能力值 II"
     },
     {
       "id": "2_6_10",
-      "name": "The Riverways"
+      "name": "河道"
     },
     {
       "id": "2_6_11",
-      "name": "The Wetlands"
+      "name": "濕地"
     },
     {
       "id": "2_6_12",
-      "name": "The Southern Forest"
+      "name": "南部森林"
     },
     {
       "id": "2_6_13",
-      "name": "The Cavern of Anger"
+      "name": "怨忿之窟深處"
     },
     {
       "id": "2_6_14",
-      "name": "The Beacon",
-      "crafting_recipe": "Life and Mana II"
+      "name": "絕望烽塔",
+      "crafting_recipe": "生命和魔力 II"
     },
     {
       "id": "2_6_15",
-      "name": "The Brine King's Reef"
+      "name": "海洋王堡礁"
     }
   ],
   [
     {
       "id": "2_7_town",
-      "name": "The Bridge Encampment"
+      "name": "橋墩營地"
     },
     {
       "id": "2_7_1",
-      "name": "The Broken Bridge"
+      "name": "河畔斷橋"
     },
     {
       "id": "2_7_2",
-      "name": "The Crossroads"
+      "name": "危機叉路"
     },
     {
       "id": "2_7_3",
-      "name": "The Fellshrine Ruins"
+      "name": "墮道遺跡"
     },
     {
       "id": "2_7_4",
-      "name": "The Crypt",
-      "crafting_recipe": "Damage over Time I"
+      "name": "靜謐陵墓",
+      "crafting_recipe": "持續傷害 I"
     },
     {
       "id": "2_7_5_1",
-      "name": "The Chamber of Sins Level 1",
-      "map_name": "The Chamber of Sins",
-      "crafting_recipe": "Lightning Damage II"
+      "name": "罪孽之殿：第 1 層",
+      "map_name": "罪孽之殿",
+      "crafting_recipe": "閃電傷害 II"
     },
     {
       "id": "2_7_5_2",
-      "name": "The Chamber of Sins Level 2",
-      "crafting_recipe": "Mana Regen I"
+      "name": "罪孽之殿：第 2 層",
+      "crafting_recipe": "魔力回復 I"
     },
     {
       "id": "2_7_5_map",
-      "name": "Maligaro's Sanctum"
+      "name": "馬雷葛蘿的書房"
     },
     {
       "id": "2_7_6",
-      "name": "The Den"
+      "name": "獸穴"
     },
     {
       "id": "2_7_7",
-      "name": "The Ashen Fields"
+      "name": "旱木原野"
     },
     {
       "id": "2_7_8",
-      "name": "The Northern Forest"
+      "name": "北部密林"
     },
     {
       "id": "2_7_9",
-      "name": "The Dread Thicket",
-      "crafting_recipe": "Fire Damage II"
+      "name": "驚魂樹洞",
+      "crafting_recipe": "火焰傷害 II"
     },
     {
       "id": "2_7_10",
-      "name": "The Causeway",
-      "crafting_recipe": "Cold Damage II"
+      "name": "堤道",
+      "crafting_recipe": "冰冷傷害 II"
     },
     {
       "id": "2_7_11",
-      "name": "The Vaal City"
+      "name": "瓦爾城市"
     },
     {
       "id": "2_7_12_1",
-      "name": "The Temple of Decay Level 1"
+      "name": "腐朽寺廟：第一層"
     },
     {
       "id": "2_7_12_2",
-      "name": "The Temple of Decay Level 2",
-      "crafting_recipe": "Chaos Damage I"
+      "name": "腐朽寺廟：第二層",
+      "crafting_recipe": "混沌傷害 I"
     },
     {
       "id": "Labyrinth_Airlock",
-      "name": "Aspirants' Plaza"
+      "name": "試煉者廣場"
     }
   ],
   [
     {
       "id": "2_8_1",
-      "name": "The Sarn Ramparts"
+      "name": "薩恩城牆"
     },
     {
       "id": "2_8_town",
-      "name": "The Sarn Encampment"
+      "name": "薩恩營地"
     },
     {
       "id": "2_8_2_1",
-      "name": "The Toxic Conduits"
+      "name": "腐化渠道"
     },
     {
       "id": "2_8_2_2",
-      "name": "Doedre's Cesspool",
-      "map_name": "The Toxic Conduits",
-      "crafting_recipe": "Elemental Resistances III"
+      "name": "德瑞的腐化池",
+      "map_name": "腐化渠道",
+      "crafting_recipe": "元素抗性 III"
     },
     {
       "id": "2_8_3",
-      "name": "The Grand Promenade"
+      "name": "宏偉行道"
     },
     {
       "id": "2_8_5",
-      "name": "The Bath House",
-      "crafting_recipe": "Flask Duration I"
+      "name": "大浴堂",
+      "crafting_recipe": "藥劑持續時間 I"
     },
     {
       "id": "2_8_4",
-      "name": "The High Gardens"
+      "name": "空中花園"
     },
     {
       "id": "2_8_6",
-      "name": "The Lunaris Concourse"
+      "name": "月影神廣場"
     },
     {
       "id": "2_8_7_1_",
-      "name": "The Lunaris Temple Level 1"
+      "name": "月影神殿：第 1 層"
     },
     {
       "id": "2_8_7_2",
-      "name": "The Lunaris Temple Level 2",
-      "crafting_recipe": "Minions I"
+      "name": "月影神殿：第 2 層",
+      "crafting_recipe": "召喚物 I"
     },
     {
       "id": "2_8_8",
-      "name": "The Quay"
+      "name": "啟程碼頭"
     },
     {
       "id": "2_8_9",
-      "name": "The Grain Gate"
+      "name": "糧儲關口"
     },
     {
       "id": "2_8_10",
-      "name": "The Imperial Fields"
+      "name": "皇家疆界"
     },
     {
       "id": "2_8_11",
-      "name": "The Solaris Concourse"
+      "name": "日耀神廣場"
     },
     {
       "id": "2_8_12_1",
-      "name": "The Solaris Temple Level 1"
+      "name": "日耀神殿：第 1 層"
     },
     {
       "id": "2_8_12_2",
-      "name": "The Solaris Temple Level 2",
-      "crafting_recipe": "Traps and Mines I"
+      "name": "日耀神殿：第 2 層",
+      "crafting_recipe": "陷阱和地雷 I"
     },
     {
       "id": "2_8_13",
-      "name": "The Harbour Bridge"
+      "name": "海港大橋"
     },
     {
       "id": "2_8_14",
-      "name": "The Hidden Underbelly"
+      "name": "隱匿地下道"
     }
   ],
   [
     {
       "id": "2_9_1",
-      "name": "The Blood Aqueduct"
+      "name": "滲血水道"
     },
     {
       "id": "2_9_town",
-      "name": "Highgate"
+      "name": "統治者之殿"
     },
     {
       "id": "2_9_2",
-      "name": "The Descent"
+      "name": "下沉地區"
     },
     {
       "id": "2_9_3",
-      "name": "The Vastiri Desert",
-      "crafting_recipe": "Attack and Cast Speed II"
+      "name": "瓦斯提里荒漠",
+      "crafting_recipe": "攻擊和施放速度 II"
     },
     {
       "id": "2_9_4",
-      "name": "The Oasis"
+      "name": "幻景綠洲"
     },
     {
       "id": "2_9_5",
-      "name": "The Foothills"
+      "name": "山麓"
     },
     {
       "id": "2_9_6",
-      "name": "The Boiling Lake",
-      "crafting_recipe": "Spell Damage III"
+      "name": "沸騰湖泊",
+      "crafting_recipe": "法術傷害 III"
     },
     {
       "id": "2_9_7",
-      "name": "The Tunnel",
-      "crafting_recipe": "All Attributes II"
+      "name": "隧道遺跡",
+      "crafting_recipe": "全能力值 II"
     },
     {
       "id": "2_9_8",
-      "name": "The Quarry",
-      "crafting_recipe": "Physical Damage III"
+      "name": "廢棄挖石場",
+      "crafting_recipe": "物理傷害 III"
     },
     {
       "id": "2_9_9",
-      "name": "The Refinery",
-      "crafting_recipe": "Trigger a Socketed Spell when you Use a Skill"
+      "name": "破損煉油廠",
+      "crafting_recipe": "當你使用技能觸發插槽中的法術"
     },
     {
       "id": "2_9_10_1",
-      "name": "The Belly of the Beast"
+      "name": "獸穴之腹"
     },
     {
       "id": "2_9_10_2",
-      "name": "The Rotting Core"
+      "name": "腐敗之核"
     }
   ],
   [
     {
       "id": "2_10_town",
-      "name": "Oriath Docks"
+      "name": "奧瑞亞港口"
     },
     {
       "id": "2_10_1",
-      "name": "The Cathedral Rooftop"
+      "name": "聖堂屋頂"
     },
     {
       "id": "2_10_2",
-      "name": "The Ravaged Square"
+      "name": "殘摧大廣場"
     },
     {
       "id": "2_10_8",
-      "name": "The Reliquary"
+      "name": "聖物間"
     },
     {
       "id": "2_10_7",
-      "name": "The Control Blocks"
+      "name": "鎮壓地帶"
     },
     {
       "id": "2_10_9",
-      "name": "The Ossuary",
-      "crafting_recipe": "Chaos Damage II"
+      "name": "葬骨禮堂",
+      "crafting_recipe": "混沌傷害 II"
     },
     {
       "id": "2_10_3",
-      "name": "The Torched Courts"
+      "name": "焚燒大教堂"
     },
     {
       "id": "2_10_4",
-      "name": "The Desecrated Chambers",
-      "crafting_recipe": "Accuracy II"
+      "name": "褻瀆之室",
+      "crafting_recipe": "命中 II"
     },
     {
       "id": "2_10_5",
-      "name": "The Canals"
+      "name": "陰屍河道"
     },
     {
       "id": "2_10_6",
-      "name": "The Feeding Trough",
-      "crafting_recipe": "Life and Mana III"
+      "name": "破沿血道",
+      "crafting_recipe": "生命和魔力 III"
     },
     {
       "id": "Labyrinth_Airlock",
-      "name": "Aspirants' Plaza"
+      "name": "試煉者廣場"
     }
   ],
   [
     {
       "id": "2_11_endgame_town",
-      "name": "Karui Shores",
-      "crafting_recipe": "Movement Speed and Flask Enchantments III"
+      "name": "卡魯沿岸",
+      "crafting_recipe": "移動速度和藥劑附魔 III"
     }
   ]
 ]
